[package]
name = "mre"
version = "0.1.0"
edition = "2018"

[dependencies]
async-listen = "0.2.1"
async-std = { version = "1.10.0" }
async-stream = "0.3"
async-trait = "0.1"
deadpool = { version = "0.8.2", features = ["managed", "rt_tokio_1"]}
futures = "0.3.15"
futures-util = "0.3.17"
http-client = {version = "6.5.1", features = ["h1_client"]}
http-types = "2.12.0"
hyper = { version = "0.14", features = ["full", "runtime"] }
lazy_static = "1.4.0"
mio = "0.7.13"
mio-misc = "1.2.1"
num_cpus = "1.13.0"
surf = {version = "2.3.1", features = ["h1-client"] }
tokio = { version = "^1.8", features = [
    "fs",
    "io-std",
    "io-util",
    "macros",
    "net",
    "rt",
    "rt-multi-thread",
    "signal",
    "sync",
    "time"
] }
tokio-stream = "0.1"
tracing = "0.1.26"
tracing-subscriber = "0.2.20"
url = "2.2"

[dev-dependencies]
cargo-criterion = "1.0.1"
criterion = {version = "0.3", features = ["async_tokio", "html_reports"]}
critcmp = "0.1.7"
lazy_static = "=1.4.0"
pprof = { version = "0.5", features = ["criterion", "flamegraph", "protobuf"] }

[profile.dev]
lto = false

[profile.bench]
debug = true

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = [
    "-Clink-arg=-fuse-ld=lld", "-Zshare-generics=y"
]

[[bench]]
name = "mre"
harness = false
