[package]
name = "mre"
version = "0.3.0"
edition = "2018"

[dependencies]
async-listen = "0.2.1"
async-std = { version = "1.10.0" }
async-stream = "0.3"
async-trait = "0.1"
futures = "0.3.15"
futures-util = "0.3.17"
http-client = {version = "6.5.1", features = ["h1_client"]}
http-types = "2.12.0"
hyper = { version = "0.14", features = ["full", "runtime"] }
mio = "0.7.13"
mio-misc = "1.2.1"
num_cpus = "1.13.0"
tokio = { version = "^1.8", features = [
    "fs",
    "io-std",
    "io-util",
    "macros",
    "net",
    "rt",
    "rt-multi-thread",
    "signal",
    "sync",
    "time"
] }
tokio-stream = "0.1"
url = "2.2"
uuid = { version = "0.8", features = ["serde", "v4", "v5"] }
# Tracing dependencies
opentelemetry = { version = "0.16.0", features = ["rt-tokio", "trace"], optional = true }
opentelemetry-jaeger = { version = "0.15.0", features = ["surf_collector_client","rt-tokio"], optional = true }
surf = { version = "2.3.1", features = ["h1-client"], optional = true }
tracing = { version = "0.1.26", optional = true }
tracing-futures = { version = "0.2.4", optional = true }
tracing-opentelemetry = { version = "0.15.0", optional = true }
tracing-subscriber = { version = "0.2.20", optional = true }
tracing-tree = { version = "0.2.0", optional = true }

[features]
default = []
hang = []
ok = []
traceable = [
  "opentelemetry",
  "opentelemetry-jaeger",
  "surf",
  "tracing",
  "tracing-futures",
  "tracing-opentelemetry",
  "tracing-subscriber",
  "tracing-tree"
]

[build]
rustflags = ["--cfg", "tokio_unstable"]